--- a/index.html
+++ b/index.html
@@ -4,30 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2023年的第一场烟花</title>
-    <audio autoplay="autoplay" controls="controls" loop="loop" preload="auto" autostart=true src="audio/oz.mp3">
-    </audio>
-
-    <style>
-        body {
-            text-align: center;
-        }
-
-        #c {
-            background: #f0f0f0;
-        }
-    </style>
+    <title>2023年给你的第一场烟花</title>
+    <link type="text/css" rel="stylesheet" href="https://hi-uni-5050.github.io/happyNewYear/">
 </head>
 
 <body>
-    <div id="jsi-cherry-container" class="container">
-        <!-- <div class="bg"></div> -->
-        <!-- <canvas class="canvas"></canvas> -->
-        <canvas class="canvas" width="100px" height="100px"></canvas>
-    </div>
-    <script src='js/烟花1/gameCanvas-4.0.js'></script>
-    <script src="js/烟花1/script.js"></script>
-
+    <h2 align="center">2023年的第一场烟花</h2>
+    <h3 align="center">音乐可能有点大，放不了用流量可能会好点</h3>
+    <h3 align="center">电脑的话直接按下面的开始按钮直接开始吧</h3>
+    <h3 align="center">手机建议先关闭锁自动旋转锁定，横屏观看</h3>
+    <h3 align="center">苹果的音乐可能不会自动播放，需要手动点一下</h3>
+    <h1 align="center">
+        <a href="https://sll208.tk/happyNewYear/" target="_blank">开始吧</a>
+    </h1>
 </body>
 
 </html>
