--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2023年给你的第一场烟花</title>
-    <link type="text/css" rel="stylesheet" href="https://hi-uni-5050.github.io/happyNewYear/">
 </head>
 
 <body>
     <h2 align="center">2023年的第一场烟花</h2>
-    <h3 align="center">音乐可能有点大，放不了用流量可能会好点</h3>
+    <h3 align="center">用流量可能会快点</h3>
     <h3 align="center">电脑的话直接按下面的开始按钮直接开始吧</h3>
-    <h3 align="center">手机建议先关闭锁自动旋转锁定，横屏观看</h3>
-    <h3 align="center">苹果的音乐可能不会自动播放，需要手动点一下</h3>
+    <h3 align="center">时间有点紧，苹果手机观看体验不好，将就吧</h3>
+    <h3 align="center">安卓手机请使用via浏览器</h3>
+    <h3 align="center">关闭屏幕方向锁定，横屏后点击开始</h3>
+    <h3 align="center">等开始播放后切换到竖屏观看</h3>
+    <h3 align="center">音乐可能不会自动播放，需要手动点一下</h3>
     <h1 align="center">
         <a href="https://sll208.tk/happyNewYear/" target="_blank">开始吧</a>
     </h1>
