--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 </head>
 
 <body>
-    <h2 align="center">2023年的第一场烟花</h2>
-    <h3 align="center">用流量可能会快点</h3>
-    <h3 align="center">电脑的话直接按下面的开始按钮直接开始吧</h3>
-    <h3 align="center">时间有点紧，苹果手机观看体验不好，将就吧</h3>
-    <h3 align="center">安卓手机请使用via浏览器</h3>
-    <h3 align="center">关闭屏幕方向锁定，横屏后点击开始</h3>
-    <h3 align="center">等开始播放后切换到竖屏观看</h3>
-    <h3 align="center">音乐可能不会自动播放，需要手动点一下</h3>
+    <h2 align="center" style="color:red">2023年的第一场烟花</h2>
+    <h3 align="center" style="color:rgb(255, 153, 0)">用流量可能会快点</h3>
+    <h3 align="center" style="color:rgb(0, 0, 0)">电脑的话直接按下面的开始按钮直接开始吧</h3>
+    <h3 align="center" style="color:rgb(34, 255, 0)">时间有点紧，苹果手机观看体验不好，将就吧</h3>
+    <h3 align="center" style="color:rgb(0, 17, 255)">安卓手机请使用via浏览器</h3>
+    <h3 align="center" style="color:rgb(85, 0, 255)">关闭屏幕方向锁定，横屏后点击开始</h3>
+    <h3 align="center" style="color:rgb(234, 0, 255)">等开始播放后切换到竖屏观看</h3>
+    <h3 align="center" style="color:rgb(255, 0, 132)">音乐可能不会自动播放，需要手动点一下</h3>
+    <div>\r\n</div>
+    <div>\r\n</div>
     <h1 align="center">
         <a href="https://sll208.tk/happyNewYear/" target="_blank">开始吧</a>
     </h1>
